@@ -1,0 +1,58 @@
+#textdomain wesnoth-lib
+###
+### In game transient message dialog.
+###
+
+[window]
+	id = "transient_message"
+	description = "A transient message on a semi-transparent dialog."
+
+	[resolution]
+		definition = "message"
+
+		easy_close = "true"
+
+		[grid]	
+
+			[row]
+
+				[column]
+					border = "all"
+					border_size = 5
+
+					vertical_alignment = "top"
+					horizontal_alignment = "left"
+
+					[label]
+						id = "title"
+						definition = "title"
+					[/label]
+
+				[/column]
+
+			[/row]
+
+			[row]
+
+				[column]
+					border = "all"
+					border_size = 5
+
+					vertical_alignment = "top"
+					horizontal_alignment = "left"
+
+					[label]
+						id = "message"
+						definition = "wml_message"
+					[/label]
+
+				[/column]
+
+			[/row]
+
+		[/grid]
+
+	[/resolution]
+
+[/window]
+
